Disabled tensorflow so it will run on my 8GB Ram Laptop :)

--- a/user_tools/algTest/testConfig.json
+++ b/user_tools/algTest/testConfig.json
@@ -43,6 +43,17 @@
 		"warnTime": 5,
 		"alarmTime": 10
             }
+	},
+	{
+	    "name": "simpleNN",
+	    "alg": "simpleNNAlg.SimpleNNAlg",
+	    "settings" : {
+		"modelFile":"simpleNNModel.sav",
+		"sampleFreq" : 25,
+		"samplePeriod" : 5.0,
+		"warnTime": 5,
+		"alarmTime": 10
+            }
 	}
     ],
     "download": false,
