--- a/user_tools/dataSummariser/templates/index.html.template
+++ b/user_tools/dataSummariser/templates/index.html.template
@@ -3,10 +3,10 @@
     <meta name="viewport"
 	  content="width=device-width, initial-scale=1, shrink-to-fit=no">    
     <title>OpenSeizureDetector Event Analysis Summary</title>
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <style>
       table.table { width:auto; }
     </style>
@@ -73,6 +73,7 @@
     
     <h2 id="RawData">Raw Data</h2>
     <img src="rawData.png"/>
+    <img src="hrData.png"/>
 
     <h2 id="Analysis">Analysis</h2>
     <table class="table table-bordered table-sm">
