--- a/user_tools/algTest/testConfig.json
+++ b/user_tools/algTest/testConfig.json
@@ -3,6 +3,9 @@
     "tcSeizuresFname":"osdb_10min_tcSeizures.json",
     "allSeizuresFname":"osdb_10min_allSeizures.json",
     "falseAlarmsFname":"osdb_10min_falseAlarms.json",
+    "_tcSeizuresFname":"tcSeizures_test.json",
+    "_allSeizuresFname":"allSeizures_test.json",
+    "_falseAlarmsFname":"falseAlarms_test.json",
     
     "invalidEvents": [5887, 10669, 10675, 11020],
     "algorithms": [
@@ -21,39 +24,11 @@
             }
 	},
 	{
-	    "name": "OSD_v2",
-	    "alg": "osdAlg.OsdAlg",
+	    "name": "Jamie_v1",
+	    "alg": "jamie1.Jamie1Alg",
 	    "settings" : {
+		"modelFname": "jamie1.pkl",
 		"sampleFreq" : 25,
-		"samplePeriod" : 5.0,
-		"alarmFreqMin" : 3,
-		"alarmFreqMax" : 8,
-		"alarmThresh" : 100,
-		"alarmRatioThresh" : 57,
-		"warnTime": 5,
-		"alarmTime": 10
-            }
-	},
-	{
-	    "name": "LSTM",
-	    "alg": "lstmAlg.LstmAlg",
-	    "settings" : {
-		"sampleFreq" : 25,
-		"samplePeriod" : 5.0,
-		"alarmFreqMin" : 3,
-		"alarmFreqMax" : 8,
-		"alarmThresh" : 100,
-		"alarmRatioThresh" : 57,
-		"warnTime": 5,
-		"alarmTime": 10
-            }
-	},
-	{
-	    "name": "simpleNN",
-	    "alg": "simpleNNAlg.SimpleNNAlg",
-	    "settings" : {
-		"modelFile":"simpleNNModel.sav",
-				"sampleFreq" : 25,
 		"samplePeriod" : 5.0,
 		"alarmFreqMin" : 3,
 		"alarmFreqMax" : 8,
