--- a/user_tools/algTest/testConfig.json
+++ b/user_tools/algTest/testConfig.json
@@ -1,11 +1,11 @@
 {
     "testName": "Unique Events from DB 29aug2022",
-    "tcSeizuresFname":"osdb_10min_tcSeizures.json",
-    "allSeizuresFname":"osdb_10min_allSeizures.json",
-    "falseAlarmsFname":"osdb_10min_falseAlarms.json",
-    "_tcSeizuresFname":"tcSeizures_test.json",
-    "_allSeizuresFname":"allSeizures_test.json",
-    "_falseAlarmsFname":"falseAlarms_test.json",
+    "_tcSeizuresFname":"osdb_10min_tcSeizures.json",
+    "_allSeizuresFname":"osdb_10min_allSeizures.json",
+    "_falseAlarmsFname":"osdb_10min_falseAlarms.json",
+    "tcSeizuresFname":"osdb_test_tcSeizures.json",
+    "allSeizuresFname":"osdb_test_allSeizures.json",
+    "falseAlarmsFname":"osdb_test_falseAlarms.json",
     
     "invalidEvents": [5887, 10669, 10675, 11020],
     "algorithms": [
@@ -27,7 +27,7 @@
 	{
 	    "name": "OSD_highThresh",
 	    "alg": "osdAlg_v1.OsdAlg_v1",
-	    "enabled": true,
+	    "enabled": false,
 	    "settings" : {
 		"sampleFreq" : 25,
 		"samplePeriod" : 5.0,
