neural network trainer runs - not sure it is giving useful results yet though!

--- a/user_tools/nnTraining/osdbConfig.json
+++ b/user_tools/nnTraining/osdbConfig.json
@@ -1,13 +1,13 @@
 {
     "testName": "Unique Events from DB 29aug2022",
     "_tcSeizuresFname":"osdb_10min_tcSeizures.json",
-    "_allSeizuresFname":"osdb_10min_allSeizures.json",
+    "allSeizuresFname":"osdb_10min_allSeizures.json",
     "falseAlarmsFname":"osdb_10min_falseAlarms.json",
-    "tcSeizuresFname":"osdb_test_tcSeizures.json",
-    "allSeizuresFname":"osdb_test_allSeizures.json",
+    "_tcSeizuresFname":"osdb_test_tcSeizures.json",
+    "_allSeizuresFname":"osdb_test_allSeizures.json",
     "_falseAlarmsFname":"osdb_test_falseAlarms.json",
     
-    "invalidEvents": [5887, 10669, 10675, 11020],
+    "invalidEvents": [5886, 5887, 8753, 10669, 10675, 11020],
     "download": false,
     "credentialsFname": "../client.cfg"
 }
