--- a/user_tools/algTest/testConfig.json
+++ b/user_tools/algTest/testConfig.json
@@ -1,17 +1,25 @@
 {
     "testName": "Unique Events from DB 29aug2022",
-    "tcSeizuresFname":"osdb_10min_tcSeizures.json",
-    "allSeizuresFname":"osdb_10min_allSeizures.json",
-    "falseAlarmsFname":"osdb_10min_falseAlarms.json",
-    "_tcSeizuresFname":"osdb_test_tcSeizures.json",
-    "_allSeizuresFname":"osdb_test_allSeizures.json",
-    "_falseAlarmsFname":"osdb_test_falseAlarms.json",
+    "_tcSeizuresFname":"osdb_10min_tcSeizures.json",
+    "_allSeizuresFname":"osdb_10min_allSeizures.json",
+    "_falseAlarmsFname":"osdb_10min_falseAlarms.json",
+    "tcSeizuresFname":"osdb_test_tcSeizures.json",
+    "allSeizuresFname":"osdb_test_allSeizures.json",
+    "falseAlarmsFname":"osdb_test_falseAlarms.json",
     
     "invalidEvents": [886, 1850, 1933, 5886, 5887, 8753, 10669, 10675, 11020],
     "invalidEventsReasons": [
 	"887, 1850, 1933 - only 2 datapoints stored for each event"
 			    ],
     "algorithms": [
+	{
+	    "name": "Phone",
+	    "alg": "deviceAlg.DeviceAlg",
+	    "enabled": true,
+	    "settings" : {
+		"ipAddr" : "192.168.0.100"
+	    }
+	},
 	{
 	    "name": "OSD_v1",
 	    "alg": "osdAlg_v1.OsdAlg_v1",
@@ -30,7 +38,7 @@
 	{
 	    "name": "OSD_highThresh",
 	    "alg": "osdAlg_v1.OsdAlg_v1",
-	    "enabled": true,
+	    "enabled": false,
 	    "settings" : {
 		"sampleFreq" : 25,
 		"samplePeriod" : 5.0,
