Added input data balancing to improve seizured detection reliability (v0.04)

--- a/curator_tools/osdb.cfg
+++ b/curator_tools/osdb.cfg
@@ -1,13 +1,15 @@
 {
     "groupingPeriod": "3min",
     "includeWarnings": 1,
-    "invalidEvents": [5886, 5887, 8753, 10669, 10675, 11020],
+    "invalidEvents": [5886, 5887, 8753, 10669, 10675, 11020, 15100, 15527],
     "invalidEventsNotes":[
 	"This is not used by the software, but is a useful place for us to record why events are invalid!",
 	"5886, 5887 - corrupt data",
 	"8753 - corrupt data",
 	"10669, 10675 - event description sounds like a test",
-	"11020 - event description sounds like a test"
+	"11020 - event description sounds like a test",
+	"15100, 15527 - no datapoints associated with event"
+
     ],
     "credentialsFname": "./client.cfg"
 }
