--- a/user_tools/testRunner/testConfig.json
+++ b/user_tools/testRunner/testConfig.json
@@ -1,21 +1,30 @@
 {
     "testName": "Unique Events from DB 29aug2022",
-    "_tcSeizuresFname":"osdb_10min_tcSeizures.json",
-    "_allSeizuresFname":"osdb_10min_allSeizures.json",
-    "_falseAlarmsFname":"osdb_10min_falseAlarms.json",
-    "tcSeizuresFname":"osdb_test_tcSeizures.json",
-    "allSeizuresFname":"osdb_test_allSeizures.json",
-    "falseAlarmsFname":"osdb_test_falseAlarms.json",
+    "tcSeizuresFname":"osdb_3min_tcSeizures.json",
+    "allSeizuresFname":"osdb_3min_allSeizures.json",
+    "falseAlarmsFname":"osdb_3min_falseAlarms.json",
+    "#tcSeizuresFname":"osdb_test_tcSeizures.json",
+    "#allSeizuresFname":"osdb_test_allSeizures.json",
+    "#falseAlarmsFname":"osdb_test_falseAlarms.json",
     
-    "invalidEvents": [886, 1850, 1933, 5886, 5887, 8753, 10669, 10675, 11020],
+    "invalidEvents": [886, 1850, 1933,
+		      5364, 5381,
+		      5886, 5887, 7724, 8753, 8889,
+		      9131,
+		      10669, 10675, 11020,
+		      15099, 15100, 15101, 15527,
+		      16104, 16329],
     "invalidEventsReasons": [
-	"887, 1850, 1933 - only 2 datapoints stored for each event"
+	"887, 1850, 1933 - only 2 datapoints stored for each event",
+	"5364, 5381, 7724, 8753, 8889 - no datapoints",
+	"9131 - invalid data",
+	"15099, 15100, 15101, 15527, 16104, 16329 - no datapoints associated with event"
 			    ],
     "algorithms": [
 	{
 	    "name": "Phone",
 	    "alg": "deviceAlg.DeviceAlg",
-	    "enabled": true,
+	    "enabled": false,
 	    "settings" : {
 		"ipAddr" : "192.168.0.100"
 	    }
@@ -31,6 +40,18 @@
 		"alarmFreqMax" : 8,
 		"alarmThresh" : 100,
 		"alarmRatioThresh" : 57,
+		"warnTime": 5,
+		"alarmTime": 10
+            }
+	},
+	{
+	    "name": "nn_v0.04",
+	    "alg": "nnAlg.NnAlg",
+	    "enabled": true,
+	    "settings" : {
+		"modelFname": "best_model_v0.04.h5",
+		"mode": "multi",
+		"samplePeriod" : 5.0,
 		"warnTime": 5,
 		"alarmTime": 10
             }
@@ -97,18 +118,6 @@
 		"alarmFreqMax" : 8,
 		"alarmThresh" : 100,
 		"alarmRatioThresh" : 57,
-		"warnTime": 5,
-		"alarmTime": 10
-            }
-	},
-	{
-	    "name": "nn_v0.02",
-	    "alg": "nnAlg.NnAlg",
-	    "enabled": true,
-	    "settings" : {
-		"modelFname": "best_model_v0.02.h5",
-		"mode": "multi",
-		"samplePeriod" : 5.0,
 		"warnTime": 5,
 		"alarmTime": 10
             }
