Updated results summary for V0.06 of CNN seizure detector.  Fixed summariseData script so it works for a single event

--- a/user_tools/testRunner/testConfig.json
+++ b/user_tools/testRunner/testConfig.json
@@ -13,12 +13,14 @@
 		      9131,
 		      10669, 10675, 11020,
 		      15099, 15100, 15101, 15527,
-		      16104, 16329],
+		      16104, 16329,
+		     18404 ],
     "invalidEventsReasons": [
 	"887, 1850, 1933 - only 2 datapoints stored for each event",
 	"5364, 5381, 7724, 8753, 8889 - no datapoints",
 	"9131 - invalid data",
-	"15099, 15100, 15101, 15527, 16104, 16329 - no datapoints associated with event"
+	"15099, 15100, 15101, 15527, 16104, 16329 - no datapoints associated with event",
+	"18404 - no datapoints"
 			    ],
     "algorithms": [
 	{
@@ -45,11 +47,11 @@
             }
 	},
 	{
-	    "name": "nn_v0.04",
+	    "name": "nn_v0.06",
 	    "alg": "nnAlg.NnAlg",
 	    "enabled": true,
 	    "settings" : {
-		"modelFname": "best_model_v0.04.h5",
+		"modelFname":"best_model_v0.06.h5",
 		"mode": "multi",
 		"samplePeriod" : 5.0,
 		"warnTime": 5,
