Update for new invalid data

--- a/curator_tools/osdb.cfg
+++ b/curator_tools/osdb.cfg
@@ -1,16 +1,23 @@
 {
     "groupingPeriod": "3min",
     "includeWarnings": 1,
-    "invalidEvents": [5886, 5887, 8753, 10669, 10675, 11020, 15100, 15527],
-    "invalidEventsNotes":[
-	"This is not used by the software, but is a useful place for us to record why events are invalid!",
-	"5886, 5887 - corrupt data",
-	"8753 - corrupt data",
-	"10669, 10675 - event description sounds like a test",
-	"11020 - event description sounds like a test",
-	"15100, 15527 - no datapoints associated with event"
+    "invalidEvents": [886, 1850, 1933,
+		      5364, 5381,
+		      5886, 5887, 7724, 8625, 8753, 8889,
+		      9129, 9131,
+		      10669, 10675,
+		      11020,
+		      15099, 15100, 15101, 15527, 15930,
+		      16104, 16308, 16329,
+		      17676, 17677,
+		      18404, 19184, 19194],
+    "invalidEventsReasons": [
+	"887, 1850, 1933 - only 2 datapoints stored for each event",
+	"5364, 5381, 7724, 8753, 8889 - no datapoints",
+	"5886, 5887, 8625, 9129, 9131, 10669, 10675, 11020, 15930, 16308, 17676, 17677 - invalid data",
+	"15099, 15100, 15101, 15527, 16104, 16329, 19184, 19194 - no datapoints associated with event"
+			    ],
 
-    ],
     "credentialsFname": "./client.cfg"
 }
 
