--- a/user_tools/nnTraining/osdbConfig.json
+++ b/user_tools/nnTraining/osdbConfig.json
@@ -1,25 +1,23 @@
 {
     "testName": "Unique Events from DB 23sep2022",
-    "_tcSeizuresFname":"osdb_10min_tcSeizures.json",
     "allSeizuresFname":"osdb_3min_allSeizures.json",
     "falseAlarmsFname":"osdb_3min_falseAlarms.json",
-    "_tcSeizuresFname":"osdb_test_tcSeizures.json",
-    "_allSeizuresFname":"osdb_test_allSeizures.json",
-    "_falseAlarmsFname":"osdb_test_falseAlarms.json",
     
     "invalidEvents": [886, 1850, 1933,
 		      5364, 5381,
-		      5886, 5887, 7724, 8753, 8889,
-		      9131,
-		      10669, 10675, 11020,
-		      15099, 15100, 15101, 15527,
-		      16104, 16329,
-		     18404],
+		      5886, 5887, 7724, 8625, 8753, 8889,
+		      9129, 9131,
+		      10669, 10675,
+		      11020,
+		      15099, 15100, 15101, 15527, 15930,
+		      16104, 16308, 16329,
+		      17676, 17677,
+		      18404, 19184, 19194],
     "invalidEventsReasons": [
 	"887, 1850, 1933 - only 2 datapoints stored for each event",
 	"5364, 5381, 7724, 8753, 8889 - no datapoints",
-	"9131 - invalid data",
-	"15099, 15100, 15101, 15527, 16104, 16329 - no datapoints associated with event"
+	"5886, 5887, 8625, 9129, 9131, 10669, 10675, 11020, 15930, 16308, 17676, 17677 - invalid data",
+	"15099, 15100, 15101, 15527, 16104, 16329, 19184, 19194 - no datapoints associated with event"
 			    ],
 
     "download": false,
