--- a/curator_tools/osdb.cfg
+++ b/curator_tools/osdb.cfg
@@ -10,12 +10,12 @@
 		      15099, 15100, 15101, 15527, 15930,
 		      16104, 16308, 16329,
 		      17676, 17677,
-		      18404, 19184, 19194],
+		      18404, 19184, 19194, 19605],
     "invalidEventsReasons": [
 	"887, 1850, 1933 - only 2 datapoints stored for each event",
 	"5364, 5381, 7724, 8753, 8889 - no datapoints",
 	"5886, 5887, 8625, 9129, 9131, 10669, 10675, 11020, 15930, 16308, 17676, 17677 - invalid data",
-	"15099, 15100, 15101, 15527, 16104, 16329, 19184, 19194 - no datapoints associated with event"
+	"15099, 15100, 15101, 15527, 16104, 16329, 19184, 19194, 19605 - no datapoints associated with event"
 			    ],
 
     "credentialsFname": "./client.cfg"
