Updates for v0.12 of CNN model, which is used in OSD App V4.1.0

--- a/user_tools/nnTraining/osdbConfig.json
+++ b/user_tools/nnTraining/osdbConfig.json
@@ -4,7 +4,7 @@
     "falseAlarmsFname":"osdb_3min_falseAlarms.json",
     "invalidEvents": [886, 1850, 1933,
 		      5364, 5381,
-		      5886, 5887, 7724, 8625, 8753, 8889,
+		      1046, 5886, 5887, 7724, 8625, 8753, 8889,
 		      9129, 9131,
 		      10669, 10675,
 		      11020,
@@ -13,20 +13,26 @@
 		      17676, 17677,
 		      18404, 19184, 19194, 19605,
 		      9828, 12973, 14101,
-		      8661
+		      8661,
+		      7357, 15417, 15452,
+		      5580, 6668, 6847, 7222, 7363, 7365, 7443, 9470, 12763
 		     ],
     "invalidEventsReasons": [
 	"887, 1850, 1933 - only 2 datapoints stored for each event",
 	"5364, 5381, 7724, 8753, 8889 - no datapoints",
-	"5886, 5887, 8625, 9129, 9131, 10669, 10675, 11020, 15930, 16308, 17676, 17677 - invalid data",
+	"1046, 5886, 5887, 8625, 9129, 9131, 10669, 10675, 11020, 15930, 16308, 17676, 17677 - invalid data",
 	"15099, 15100, 15101, 15527, 16104, 16329, 19184, 19194, 19605 - no datapoints associated with event",
 	"9828, 12973, 14101, 15208 - Phone datasource, not watch",
-	"8661 - bad data - big gaps then datapoints at short spacings - but looks like a genuine seizure with big HR ramp up"
+	"8661 - bad data - big gaps then datapoints at short spacings - but looks like a genuine seizure with big HR ramp up",
+	"The events below are excluded for training purposes only - valid for testing",
+	"7357 - manual alarm, but no movement at time of alarm - alarm time specified wrongly?",
+	"15417, 15452 - manual alarm - no movement at time of alarm",
+	"5580, 6668, 6847, 7222, 7363, 7365, 7443, 9470, 12763 - duration too short - includes some zero movement data"
     ],
 
     "download": false,
     "credentialsFname": "../client.cfg",
 
-    "seizureTimeRange":[-20,40],
+    "seizureTimeRange":[-20,20],
     "oversample": true
 }
