Created tidy_db.py to tidy up the osdb json files to expand the dataJSON strings to make the structure simpler for users to understand. Note - there is an issue with memory management - processing the unknownEvents.json file crashes my computer because we use up the 16 GB of memory on it!

--- a/user_tools/testRunner/testConfig.json
+++ b/user_tools/testRunner/testConfig.json
@@ -45,11 +45,35 @@
             }
 	},
 	{
-	    "name": "nn_v0.12",
+	    "name": "cnnAdam",
+	    "alg": "nnAlg.NnAlg",
+	    "enabled": false,
+	    "settings" : {
+		"modelFname":"cnnAdam.h5",
+		"mode": "multi",
+		"samplePeriod" : 5.0,
+		"warnTime": 5,
+		"alarmTime": 10
+            }
+	},
+	{
+	    "name": "cnnRMS",
+	    "alg": "nnAlg.NnAlg",
+	    "enabled": false,
+	    "settings" : {
+		"modelFname":"cnnRMSProps.h5",
+		"mode": "multi",
+		"samplePeriod" : 5.0,
+		"warnTime": 5,
+		"alarmTime": 10
+            }
+	},
+	{
+	    "name": "nn_v0.14",
 	    "alg": "nnAlg.NnAlg",
 	    "enabled": true,
 	    "settings" : {
-		"modelFname":"best_model_v0.12.h5",
+		"modelFname":"best_model_v0.14.h5",
 		"mode": "multi",
 		"samplePeriod" : 5.0,
 		"warnTime": 5,
