--- a/curator_tools/osdb.cfg
+++ b/curator_tools/osdb.cfg
@@ -1,6 +1,18 @@
 {
     "groupingPeriod": "3min",
     "includeWarnings": 1,
+	"seizureTimesFname": "seizure_durations.csv",
+	"_skipElements_desc":  "a list of element IDs in the raw data that should be omitted from the published database to save space (As they are not populated",
+	"skipElements": [
+		"accMean",
+		"accSd",
+		"updated",
+		"created",
+		"dataTimeStr",
+		"maxVal",
+		"maxFreq",
+		"statusStr"
+	],
     "invalidEvents": [886, 1850, 1933,
 		      5364, 5381,
 		      5886, 5887, 7724, 8625, 8753, 8889,
