Updated makeOsdDb.py to tidy the data to remove the nexted dataJSON strings, and merge in the seizure_durations.csv data. Updated dataSummariser to use the new format of the files.   Still need to update testRunner and nnTraining to use this format.

--- a/curator_tools/osdb.cfg
+++ b/curator_tools/osdb.cfg
@@ -1,4 +1,5 @@
 {
+	"osdbDir": "/home/graham/osd/osdb",
     "groupingPeriod": "3min",
     "includeWarnings": 1,
 	"seizureTimesFname": "seizure_durations.csv",
