--- a/curator_tools/osdb.cfg
+++ b/curator_tools/osdb.cfg
@@ -25,13 +25,15 @@
 		      16104, 16308, 16329,
 		      17676, 17677,
 		      18404, 19184, 19194, 19605,
-			  20595],
+			  20595,
+			  7443, 7445, 15099, 15101, 15452, 16329, 19184, 19194],
     "invalidEventsReasons": [
 	"887, 1850, 1933 - only 2 datapoints stored for each event",
 	"5364, 5381, 7724, 8753, 8889 - no datapoints",
 	"5886, 5887, 8625, 9129, 9131, 10669, 10675, 11020, 15930, 16308, 17676, 17677 - invalid data",
 	"15099, 15100, 15101, 15527, 16104, 16329, 19184, 19194, 19605 - no datapoints associated with event",
-	"20595 - test"
+	"20595 - test",
+	"7443, 7445 - bad data"
 			    ],
 
     "credentialsFname": "./client.cfg"
