--- a/user_tools/testRunner/testConfig.json
+++ b/user_tools/testRunner/testConfig.json
@@ -69,11 +69,11 @@
             }
 	},
 	{
-	    "name": "nn_v0.14",
+	    "name": "cnn_v0.16",
 	    "alg": "nnAlg.NnAlg",
-	    "enabled": false,
+	    "enabled": true,
 	    "settings" : {
-		"modelFname":"best_model_v0.14.h5",
+		"modelFname":"cnn_v0.16.h5",
 		"mode": "multi",
 		"samplePeriod" : 5.0,
 		"warnTime": 5,
