Added cnn_v0.20 - a deeper model (5 layers rather than 3) - seems to give much better performance.

--- a/user_tools/testRunner/testConfig.json
+++ b/user_tools/testRunner/testConfig.json
@@ -69,11 +69,11 @@
             }
 	},
 	{
-	    "name": "cnn_v0.19",
+	    "name": "cnn_v0.20",
 	    "alg": "nnAlg.NnAlg",
 	    "enabled": true,
 	    "settings" : {
-		"modelFname":"cnn_v0.19.h5",
+		"modelFname":"cnnDeep_v0.20.h5",
 		"mode": "multi",
 		"samplePeriod" : 5.0,
 		"warnTime": 5,
