--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -1,7 +1,7 @@
 {
     "debug": false,
     "osdbCfg":"../osdbCfg.json",
-    "modelClass": "cnnModel.CnnModel",
+    "modelClass": "cnnDeepModel.CnnModel",
     "epochs": 500,
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
