Updated testrunner to work with NDA events as well as false alarms

--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -6,6 +6,9 @@
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
     "oversample": "random",
+    "noiseAugmentation": false,
+    "noiseAugmentationFactor": 10,
+    "noiseAugmentationLevel": 10,
     "phaseAugmentation": false,
     "splitTestTrainByEvent": true,
     "testProp" : 0.3,
