Updated nnTrainer to reject very low movement seizure datapoints.   Updated datasummariser to include data poitn standard deviation on raw data graph

--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -11,6 +11,7 @@
     "noiseAugmentationLevel": 10,
     "phaseAugmentation": false,
     "splitTestTrainByEvent": true,
+    "accSdThreshold": 1.0,
     "testProp" : 0.3,
     "validationProp": 0.3,
     "randomSeed" : 4,
