--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -6,9 +6,9 @@
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
     "oversample": "random",
-    "noiseAugmentation": false,
-    "noiseAugmentationFactor": 10,
-    "noiseAugmentationLevel": 10,
+    "noiseAugmentation": true,
+    "noiseAugmentationFactor": 5,
+    "noiseAugmentationValue": 10.0,
     "phaseAugmentation": false,
     "splitTestTrainByEvent": true,
     "accSdThreshold": 1.0,
