--- a/user_tools/testRunner/testConfig.json
+++ b/user_tools/testRunner/testConfig.json
@@ -2,7 +2,8 @@
     "testName": "Unique Events from DB 29aug2022",
     "tcSeizuresFname":"osdb_3min_tcSeizures.json",
     "allSeizuresFname":"osdb_3min_allSeizures.json",
-    "falseAlarmsFname":"osdb_3min_falseAlarms.json",
+    "_falseAlarmsFname":"osdb_3min_falseAlarms.json",
+    "falseAlarmsFname":"osdb_3min_ndaEvents.json",
     "#tcSeizuresFname":"osdb_test_tcSeizures.json",
     "#allSeizuresFname":"osdb_test_allSeizures.json",
     "#falseAlarmsFname":"osdb_test_falseAlarms.json",
@@ -59,11 +60,11 @@
             }
 	},
 	{
-	    "name": "cnn_v0.23",
+	    "name": "cnn_v0.24",
 	    "alg": "nnAlg.NnAlg",
 	    "enabled": true,
 	    "settings" : {
-		"modelFname":"cnn_v0.23.h5",
+		"modelFname":"cnn_v0.24.h5",
 		"mode": "multi",
 		"samplePeriod" : 5.0,
 		"warnTime": 5,
