Added option to save test and tran datasets used to train model

--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -8,10 +8,11 @@
     "oversample": "random",
     "noiseAugmentation": true,
     "noiseAugmentationFactor": 5,
-    "noiseAugmentationValue": 10.0,
+    "noiseAugmentationValue": 20.0,
     "phaseAugmentation": false,
     "splitTestTrainByEvent": true,
     "accSdThreshold": 1.0,
+    "saveTestTrainData": true,
     "testProp" : 0.3,
     "validationProp": 0.3,
     "randomSeed" : 4,
