Added some console output so we know it is doing something while building datasets.

--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -4,14 +4,14 @@
     "saveTestTrainData": false,
     "testDataFile":"testData_29oct22.json",
     "trainDataFile":"trainData_29oct22.json",
-    "modelClass": "cnnDeepModel.CnnModel",
+    "modelClass": "cnnFftModel.CnnFftModel",
     "epochs": 500,
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
     "oversample": "random",
     "noiseAugmentation": true,
-    "noiseAugmentationFactor": 5,
-    "noiseAugmentationValue": 20.0,
+    "noiseAugmentationFactor": 6,
+    "noiseAugmentationValue": 10.0,
     "phaseAugmentation": false,
     "splitTestTrainByEvent": true,
     "accSdThreshold": 1.0,
@@ -21,6 +21,6 @@
     "lrFactor" : 0.9,
     "lrPatience": 20,
     "lrMin": 0.0001,
-    "earlyStoppingPatience": 20,
+    "earlyStoppingPatience": 100,
     "trainingVerbosity": 1
 }
