--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -1,26 +1,27 @@
 {
-    "debug": false,
+    "debug": true,
     "osdbCfg":"../osdbCfg.json",
     "saveTestTrainData": false,
     "testDataFile":"testData_29oct22.json",
     "trainDataFile":"trainData_29oct22.json",
-    "modelClass": "cnnFftModel.CnnFftModel",
+    "modelClass": "cnnModel.CnnModel",
+    "nLayers": 3,
     "epochs": 500,
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
     "oversample": "random",
-    "noiseAugmentation": true,
-    "noiseAugmentationFactor": 6,
+    "noiseAugmentation": false,
+    "noiseAugmentationFactor": 2,
     "noiseAugmentationValue": 10.0,
-    "phaseAugmentation": false,
+    "phaseAugmentation": true,
     "splitTestTrainByEvent": true,
     "accSdThreshold": 1.0,
     "testProp" : 0.3,
     "validationProp": 0.3,
     "randomSeed" : 4,
-    "lrFactor" : 0.9,
+    "lrFactor" : 0.5,
     "lrPatience": 20,
     "lrMin": 0.0001,
-    "earlyStoppingPatience": 100,
+    "earlyStoppingPatience": 50,
     "trainingVerbosity": 1
 }
