--- a/user_tools/testRunner/testConfig.json
+++ b/user_tools/testRunner/testConfig.json
@@ -64,11 +64,11 @@
             }
 	},
 	{
-	    "name": "cnn_v0.25",
+	    "name": "cnn",
 	    "alg": "nnAlg.NnAlg",
 	    "enabled": true,
 	    "settings" : {
-		"modelFname":"cnn_v0.25.h5",
+		"modelFname":"cnn.h5",
 		"mode": "multi",
 		"samplePeriod" : 5.0,
 		"warnTime": 5,
