Moved noise augmentation to only apply to seizure data, not all datapoints to avoid excessive memory usage.

--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -10,12 +10,12 @@
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
     "oversample": "random",
-    "noiseAugmentation": false,
-    "noiseAugmentationFactor": 2,
-    "noiseAugmentationValue": 10.0,
+    "noiseAugmentation": true,
+    "noiseAugmentationFactor": 100,
+    "noiseAugmentationValue": 20.0,
     "phaseAugmentation": true,
     "splitTestTrainByEvent": true,
-    "accSdThreshold": 1.0,
+    "accSdThreshold": 0.5,
     "testProp" : 0.3,
     "validationProp": 0.3,
     "randomSeed" : 4,
