Added catch to prevent crash if no events in list

--- a/curator_tools/osdb.cfg
+++ b/curator_tools/osdb.cfg
@@ -15,7 +15,7 @@
 		"statusStr",
 		"categoryId"
 	],
-    "invalidEvents": [886, 1850, 1933,
+    "invalidEvents": [118, 886, 1850, 1933,
 		      5364, 5381,
 		      5886, 5887, 7724, 8625, 8753, 8889,
 		      9129, 9131,
