progress with csv version of neural network data preparation tool chain - not working yet

--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -2,8 +2,8 @@
     "debug": true,
     "osdbCfg":"../osdbCfg.json",
     "saveTestTrainData": false,
-    "testDataFile":"testData_29oct22.json",
-    "trainDataFile":"trainData_29oct22.json",
+    "testDataFile":"testData.json",
+    "trainDataFile":"trainData.json",
     "modelClass": "cnnModel.CnnModel",
     "nLayers": 3,
     "epochs": 500,
