--- a/curator_tools/osdb.cfg
+++ b/curator_tools/osdb.cfg
@@ -2,6 +2,11 @@
 	"osdbDir": "/home/graham/osd/osdb",
     "groupingPeriod": "3min",
     "includeWarnings": 1,
+	"dataFiles": [
+	"osdb_3min_allSeizures.json",
+	"osdb_3min_fallEvents.json",
+	"osdb_3min_falseAlarms.json"
+    ],
 	"seizureTimesFname": "seizure_durations.csv",
 	"_skipElements_desc":  "a list of element IDs in the raw data that should be omitted from the published database to save space (As they are not populated",
 	"skipElements": [
@@ -26,7 +31,9 @@
 		      17676, 17677,
 		      18404, 19184, 19194, 19605,
 			  20595,
-			  7443, 7445, 15099, 15101, 15452, 16329, 19184, 19194],
+			  7443, 7445, 15099, 15101, 15452, 16329, 19184, 19194,
+			  	7105, 5985, 34018, 23201, 23683, 27274, 27516, 27785, 28252, 34195, 34131, 34116
+	],
     "invalidEventsReasons": [
 	"887, 1850, 1933 - only 2 datapoints stored for each event",
 	"5364, 5381, 7724, 8753, 8889 - no datapoints",
